--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -17,7 +17,7 @@
         <div class="panel">
             <span class="nick"></span>
             <input type="text" name="message_text" id="message_text">
-            <button type="button" id="message_btn">Отправить</button>
+            <button type="button" id="message_btn">Send</button>
         </div>
     </div>
 </div>
