--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -8,6 +8,7 @@
     <title>virtual chat</title>
 </head>
 <body>
+        <script src="https://live.viber.com/#/testBotEnovate"></script>
 <div class="demo">
     <h1>virtual chat</h1>
  
@@ -22,6 +23,7 @@
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="https://live.viber.com/#/testBotEnovate"></script>
 <!-- <script src="/socket.io/socket.io.js"></script> -->
 <script type="text/javascript"> 
  // javascript code
