--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -22,7 +22,7 @@ function getToken() {
     // construct login page URL
 	var url = dns + "/login.html"; // your site DNS + "/login.html"
 	//url += "?client_id=" + "App";	// your application name
-    url += "?access_type=" + 0x100;	// access level, 0x100 = "Online tracking only"
+    url += "?access_type=" + -1//0x200//0x4000000//0x400;	// access level, 0x100 = "Online tracking only"
     url += "&activation_time=" + 0;	// activation time, 0 = immediately; you can pass any UNIX time value
     url += "&duration=" + 0;	// duration, 604800 = one week in seconds
     url += "&flags=" + 0x1;			// options, 0x1 = add username in response
