--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -7,7 +7,10 @@
     <meta name="robots" content="noindex,nofollow"/>
     <title>virtual chat</title>
 </head>
-<body>
+<body>        
+    <input id="test" type="button" value="Click to test" onclick="test()"/>
+    <div id="response">false</div>
+    <div id="push">000000</div>
 <div class="demo">
     <h1>virtual chat</h1>
  
@@ -24,6 +27,31 @@
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 <!-- <script src="/socket.io/socket.io.js"></script> -->
 <script type="text/javascript"> 
+function test(){
+    var e = document.getElementById("push");
+    var text = e.textContent || e.innerText;
+    switch(text){
+        case '000000': text = '111111'; break;
+        case '111111': text = '000000'; break;
+    }
+    e.innerHTML = text;
+    let status = 1;
+    let myToken = JSON.stringify({status : status})
+    let request = new XMLHttpRequest();
+    request.open("POST", "/test", true);   
+    request.setRequestHeader("Content-Type", "application/json");
+    request.addEventListener("load", function () {
+    if(request.status < 400){
+        document.getElementById("response").innerHTML = '///////////// true //////////////';        
+    }
+    if(request.status >= 400){
+        document.getElementById("response").innerHTML = "error";
+        
+    }
+    });
+    request.send(myToken);
+}
+
  // javascript code
  $(document).ready(function () {
         // var socket = io();
@@ -33,7 +61,8 @@
         var socketId;
         $('.chat .nick').text(name);
 
-     var ws = new WebSocket('ws://damp-tundra-61257.herokuapp.com/ ');
+        var ws = new WebSocket('ws://localhost:3000/ ');
+     //var ws = new WebSocket('ws://damp-tundra-61257.herokuapp.com/ ');
      $("#message_btn").click(function () {
             var text = $("#message_text").val();
             if (text.length <= 0)
