--- a/public/views/auth.ejs
+++ b/public/views/auth.ejs
@@ -12,7 +12,7 @@
 
     </div>
 
-<script>
+<!-- <script>
     document.addEventListener("DOMContentLoaded", ready);
 
     function ready(){
@@ -55,7 +55,7 @@
             window.open(url, "_blank", "width=760, height=500, top=300, left=500");
 
          });
-    </script>
+    </script> -->
 
 </body>
 </html>
