--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -126,7 +126,7 @@ function tokenRecieved(e) {
             let state = '-5466400890088961855'
             let params = `?response_type=code&client_id=${client_id}&scope=${scope}&redirect_uri=${redirect}&state=${state}`;
             var url = `https://accounts.zoho.com/oauth/v2/auth${params}`;
-            window.open(url, "_blank", "width=760, height=500, top=300, left=500");
+            window.open(url, 'zoho', "_blank", "width=760, height=500, top=300, left=500");
 
             let user = JSON.stringify({client_id: client_id, client_secret: client_secret});
             // сериализуем данные в json
