--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -122,7 +122,7 @@ function tokenRecieved(e) {
             var client_secret= loginForm.elements["client_secret"].value;
 
             var scope = 'Desk.tickets.READ,Desk.basic.READ,Desk.tickets.CREATE,Desk.tickets.UPDATE'
-            var redirect = 'https://damp-tundra-61257.herokuapp.com/auth'
+            var redirect = 'https://damp-tundra-61257.herokuapp.com/auth/getcode'
             var state = '-5466400890088961855'
             var params = `?response_type=code&client_id=${client_id}&scope=${scope}&redirect_uri=${redirect}&state=${state}`;
             var url = `https://accounts.zoho.com/oauth/v2/auth${params}`;
@@ -131,7 +131,7 @@ function tokenRecieved(e) {
             // сериализуем данные в json
             let request = new XMLHttpRequest();
             // посылаем запрос на адрес "/user"
-             request.open("POST", "/auth/getcode", true);   
+             request.open("POST", "/auth/saveclient", true);   
              request.setRequestHeader("Content-Type", "application/json");
              request.addEventListener("load", function () {
     
