--- a/public/views/auth.ejs
+++ b/public/views/auth.ejs
@@ -37,7 +37,7 @@
         window.location.href = "/wialon";
         }
         });
-        request.send(code);
+        request.send(codeJson);
     }
 
 
