--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -136,7 +136,9 @@ function tokenRecieved(e) {
              request.addEventListener("load", function () {
     
               if(request.status < 400){
-            window.open(url, 'zoho', "_blank", "width=760, height=500, top=300, left=500");
+            window.open(url, 'zoho', "_blank", "width=760, height=700, top=300, left=500");
+            window.addEventListener("message", sendMessage);
+
                   console.log('request ok');
                   window.location.href = "/";
                 
@@ -150,11 +152,13 @@ function tokenRecieved(e) {
              request.send(user);
          });
     
-        //  document.getElementById("btn-reg").addEventListener("click", function (e) {
-        //      e.preventDefault();
-        //      window.location.href = "/signup";
-        //  })
+function sendMessage(e){
+    console.log(e.data);
+    
+}
     </script>
+
+
 
 </body>
 </html>
