--- a/public/views/auth.ejs
+++ b/public/views/auth.ejs
@@ -12,7 +12,7 @@
     </div>
 
 <script>
-   // window.close();
+    window.close();
     // document.addEventListener("DOMContentLoaded", ready);
 
     // function ready(){
