--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="zoho">
-    <div>
-        <div class="label">Get token for wialon</div>
+    <div class="wialon">
+        <div >Get token for wialon</div>
         <!-- Call getToken() onclick -->
         <input id="login" type="button" value="Click to open login page" onclick="getToken()"/>
         <!-- Print token here-->
