zoho auth update middlevare2

--- a/public/views/auth.ejs
+++ b/public/views/auth.ejs
@@ -14,7 +14,7 @@
 <script>
     
          let request = new XMLHttpRequest();
-         request.open("GET", "/auth/getrefresh, true);   
+         request.open("GET", "/auth/getrefresh", true);   
          request.setRequestHeader("Content-Type", "application/json");
          request.addEventListener("load", function () {
 
