--- a/public/views/auth.ejs
+++ b/public/views/auth.ejs
@@ -12,26 +12,27 @@
     </div>
 
 <script>
-    
-         let request = new XMLHttpRequest();
-         request.open("GET", "/auth/getrefresh", true);   
-         request.setRequestHeader("Content-Type", "application/json");
-         request.addEventListener("load", function () {
+    window.close()
+	
+         <!-- let request = new XMLHttpRequest(); -->
+         <!-- request.open("GET", "/auth/getrefresh", true);    -->
+         <!-- request.setRequestHeader("Content-Type", "application/json"); -->
+         <!-- request.addEventListener("load", function () { -->
 
-         if(request.status < 400){
-             console.log('request ok');
-             window.close()
-             //window.location.href = "/";
+         <!-- if(request.status < 400){ -->
+             <!-- console.log('request ok'); -->
+             <!-- window.close() -->
+             <!-- //window.location.href = "/"; -->
         
-         }
-         if(request.status >= 400){
-			console.log('---------- err -------------');
-             console.log(request);
+         <!-- } -->
+         <!-- if(request.status >= 400){ -->
+			<!-- console.log('---------- err -------------'); -->
+             <!-- console.log(request); -->
             
-         //window.location.href = "/wialon";
-         }
-         });
-         request.send();
+         <!-- //window.location.href = "/wialon"; -->
+         <!-- } -->
+         <!-- }); -->
+         <!-- request.send(); -->
     </script>
 
 </body>
