--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -116,42 +116,112 @@ function tokenRecieved(e) {
  
         document.getElementById("btn-login").addEventListener("click", function (e) {
              e.preventDefault();
-            // получаем данные формы
+            // get form data
             var loginForm = document.forms["loginForm"];
             var client_id = loginForm.elements["client_id"].value;
             var client_secret= loginForm.elements["client_secret"].value;
-
+			// create url && params
             var scope = 'Desk.tickets.READ,Desk.basic.READ,Desk.tickets.CREATE,Desk.tickets.UPDATE'
             var redirect = 'https://damp-tundra-61257.herokuapp.com/auth/getrefresh'
-            var state = '-5466400890088961855'
-            var params = `?response_type=code&client_id=${client_id}&scope=${scope}&redirect_uri=${redirect}&state=${state}`;
-            var url = `https://accounts.zoho.com/oauth/v2/auth${params}`;
-            window.open(url, 'zoho', "_blank", "width=760, height=700, top=300, left=500");
-            //window.addEventListener("message", sendMessage);
 
-            let user = JSON.stringify({client_id: client_id, client_secret: client_secret});
-            // сериализуем данные в json
-            let request = new XMLHttpRequest();
-            // посылаем запрос на адрес "/user"
-             request.open("POST", "/auth/saveclient", true);   
-             request.setRequestHeader("Content-Type", "application/json");
-             request.addEventListener("load", function () {
+
+/******** replace below values with your own     ********/
+
+<!-- let clientId    = '1000.AZG38NQ6SL1M93609QWWNTX31S8M54';                                       //YOUR CLIENT ID -->
+<!-- let scope       = `Desk.tickets.ALL,Desk.basic.ALL`;                                           //YOUR SCOPES  -->
+<!-- let redirectUri = 'https://zohodesk-extension.herokuapp.com/desk-js-oauth-cors/redirect.html'; //YOUR REDIRECT URL  -->
+
+let callback_after_authorize = (function(generatedOauthToken){
+                                    document.getElementById("oauthtoken").innerHTML = generatedOauthToken;
+                                    console.log('OAuthtoken = ' + generatedOauthToken );
+                                });
+
+/******** replace above values with your own     ********/
+
+
+let ci;
+let ct;
+let generatedOauthToken = null;
+
+<!-- function initiateAuthroizeFromInput(e){ -->
+    <!-- console.log(e); -->
+    <!-- e.preventDefault(); -->
+    <!-- clientId    = document.getElementById("client_id").value.trim(); -->
+    <!-- scope       = document.getElementById("scopes").value.trim(); -->
+    <!-- redirectUri = document.getElementById("redirect_uri").value.trim(); -->
+    initiateAuthorize();
+<!-- } -->
+
+function initiateAuthorize(){
+    let authWindow = window.open(`https://accounts.zoho.com/oauth/v2/auth?response_type=token&client_id=${clientId}&scope=${scope},Desk.articles.DELETE&redirect_uri=${redirectUri}&state=1234`,
+                            '_blank',
+                            'width=500,height=500'
+                    );
+    let authPromise = new Promise((res, rej) => {
+        ci = setInterval(() => { /*checking hash value in every one second till reached [ пока не достиг]  50sec or throw reject timeout */
+            try {
+                let hashData = authWindow.location.hash;
+                if(hashData) {
+                    res(hashData);
+                    authWindow.close();
+                }
+            }
+            catch (e) {
+                console.log('hash not yet received');
+            }
+      }, 1000);
+      ct = setTimeout(() => {
+                rej('timeout reached');
+                ci();
+                authWindow.close();
+          }, 50000);
+    });
+    authPromise.then(
+        hash => {
+            generatedOauthToken = getAccessToken(hash);
+            callback_after_authorize(generatedOauthToken);
+        },
+        err => console.log(' error... ', err)
+    );
+}
+
+function getParameterByName(name, hash) {
+    let match = RegExp(`[#&]${name}=([^&]*)`).exec(hash);
+    return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+}
+
+function getAccessToken(hash) {
+    return getParameterByName('access_token', hash);
+}
+
+
+            <!-- var state = '-5466400890088961855' -->
+            <!-- var params = `?response_type=code&client_id=${client_id}&scope=${scope}&redirect_uri=${redirect}&state=${state}`; -->
+            <!-- var url = `https://accounts.zoho.com/oauth/v2/auth${params}`; -->
+            <!-- window.open(url, 'zoho', "_blank", "width=760, height=700, top=300, left=500"); -->
+
+            <!-- let user = JSON.stringify({client_id: client_id, client_secret: client_secret}); -->
+            <!-- let request = new XMLHttpRequest(); -->
+			<!-- //save to db client_id && secret_code -->
+             <!-- request.open("POST", "/auth/saveclient", true);    -->
+             <!-- request.setRequestHeader("Content-Type", "application/json"); -->
+             <!-- request.addEventListener("load", function () { -->
     
-              if(request.status < 400){
-            //window.open(url, 'zoho', "_blank", "width=760, height=700, top=300, left=500");
-            //window.addEventListener("message", sendMessage);
+              <!-- if(request.status < 400){ -->
+            <!-- //window.open(url, 'zoho', "_blank", "width=760, height=700, top=300, left=500"); -->
+            <!-- //window.addEventListener("message", sendMessage); -->
 
-                  console.log('request ok');
-                  window.location.href = "/";
+                  <!-- console.log('request ok'); -->
+                  <!-- window.location.href = "/"; -->
                 
-              }
-              if(request.status >= 400){
-                  console.log('error send');
+              <!-- } -->
+              <!-- if(request.status >= 400){ -->
+                  <!-- console.log('error send'); -->
                   
-                window.location.href = "/wialon";
-              }
-             });
-             request.send(user);
+                <!-- window.location.href = "/wialon"; -->
+              <!-- } -->
+             <!-- }); -->
+             <!-- request.send(user); -->
          });
     
 function sendMessage(e){
