--- a/public/views/wialon.ejs
+++ b/public/views/wialon.ejs
@@ -15,7 +15,7 @@
         <!-- Print token here-->
         Your token: <span id="token"></span>
     </div>
-    <div class="form-header">
+    <div id="sample" class="form-header">
         <div>Get token for Zoho desk</div>
         <div class="conteinerForm">
         <form name="loginForm" class="form-login"  method="post" action="/registr" novalidate>
